[gd_scene load_steps=5 format=3 uid="uid://rruy1wqwlhk0"]

[ext_resource type="Script" path="res://Player.gd" id="1_38e5p"]
[ext_resource type="PackedScene" uid="uid://drf7so08lwtm0" path="res://art/player.glb" id="1_p2ykv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_0jkx7"]
radius = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gwbhs"]
height = 0.2
radius = 1.2

[node name="Player" type="CharacterBody3D"]
collision_mask = 6
script = ExtResource("1_38e5p")

[node name="Pivot" type="Node3D" parent="."]

[node name="Character" parent="Pivot" instance=ExtResource("1_p2ykv")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_0jkx7")

[node name="MobDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("CylinderShape3D_gwbhs")

[node name="SquashTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="timeout" from="SquashTimer" to="." method="_on_squash_timer_timeout"]
